[fixed] Code content on mobile error

--- a/src/styles/scss/base/_colors.scss
+++ b/src/styles/scss/base/_colors.scss
@@ -1,4 +1,5 @@
 $background: #101010;
+$subdued-background: #292929;
 
 $ppal-gradient: linear-gradient(90deg, rgba(158,0,255,1) 0%, rgb(0, 192, 192) 80%);
 
