--- a/src/styles/scss/base/_fonts.scss
+++ b/src/styles/scss/base/_fonts.scss
@@ -17,9 +17,8 @@ ul li.active a {
 }
 pre {
   display: inline-block;
-  padding: 5px;
+  padding: 4px;
   font-size: 1.4rem;
-  background: #535353;
+  background: $subdued-background;
   border-radius: 5px;
-  color: #c9c9c9;
 }
