--- a/src/styles/scss/viewArticle/_view-article-desktop.scss
+++ b/src/styles/scss/viewArticle/_view-article-desktop.scss
@@ -8,7 +8,7 @@
   padding-right: 70px;
 }
 .article__content--content {
-  padding-right: 30%;
+  padding-right: 40%;
 }
 .article__content ul {
   margin-left: 15px;
@@ -16,8 +16,5 @@
 .article-header {
   display: flex;
   justify-content: space-between;
-  margin: 50px 0px 30px 0;
-}
-@media (min-width: 1280px) {
-
+  margin-top: 50px;
 }
