--- a/src/styles/scss/viewArticle/_view-article.scss
+++ b/src/styles/scss/viewArticle/_view-article.scss
@@ -23,9 +23,10 @@
 }
 .article__content h2 {
   font-size: 2rem;
-  line-height: 3.2rem;
-  font-weight: bold;
   text-align: center;
+  line-height: 3.2rem;
+  margin: 10px 0;
+  font-weight: bold;
   margin-bottom: 10px;
 }
 .article__content ul {
@@ -34,4 +35,30 @@
 .article__content img {
   width: 100%;
   margin-bottom: 20px;
+}
+.article__content pre {
+  max-width: 100%;
+  white-space: pre-wrap;
+}
+code {
+  padding: 4px;
+  background-color: $subdued-background;
+  border-radius: 5px;
+  color: #920000;
+  font-weight: 700;
+}
+.article__content pre > code {
+  background: none;
+  padding: 0;
+  font-size: 1.2rem;
+  line-height: 2rem;
+  font-weight: 300;
+  text-align: start;
+  margin-bottom: 10px;
+  color: #c9c9c9;
+}
+@media (min-width: 768px) {
+  .article__content h2 {
+    text-align: start;
+  }
 }
